--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
   "main": "main.js",
   "scripts": {
     "dev": "electron ./app",
-
     "clean": "rm -rf ./dist",
     "clean:osx": "rm -rf ./dist/osx",
     "clean:win": "rm -rf ./dist/win",
-
     "pack": "npm run clean && npm run pack:osx && npm run pack:win",
     "pack:osx": "npm run clean:osx && electron-packager ./app \"myNotebook\" --out=dist/osx --platform=darwin --arch=x64 --version=0.36.7 --icon=assets/osx/myNotebook.icns",
     "pack:win": "npm run clean:win && electron-packager ./app \"myNotebook\" --out=dist/win --platform=win32 --arch=ia32 --version=0.36.7 --icon=assets/win/myNotebook.ico",
-
     "build": "npm run build:osx && npm run build:win",
     "build:osx": "npm run pack:osx && electron-builder \"dist/osx/myNotebook.app\" --platform=osx --out=\"dist/osx\" --config=builder.json",
     "build:win": "npm run pack:win && electron-builder \"dist/win/myNotebook-win32\" --platform=win --out=\"dist/win\" --config=builder.json"
   },
   "dependencies": {
+    "easy-zip": "0.0.4",
+    "electron-builder": "^2.7.2",
     "electron-packager": "^4.0.2",
     "electron-prebuilt": "^0.36.7",
-    "electron-builder": "^2.7.2"
+    "lunr": "^2.3.6",
+    "nedb": "^1.6.0",
+    "walk": "^2.3.14"
   }
 }
